Sun Oct 14 00:20:38 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decaof.h (AREA_*): Copied AREA_* definitions from asasm.
	* decode.c (decode): Update for new AREA_* definitions.

Fri Oct 12 22:46:08 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am: Remove bogus comments.

Wed Oct 10 22:32:08 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decaof.h (SYMBOL_*): Copied SYMBOL_* definitions from asasm.
	* decode.c (decode): Use SYMBOL_* definition instead of magic constants.
	Add missing symbol bit checking.

Sun Oct  7 13:18:31 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac (AC_INIT): Increase version to 2.01.
	* Makefile.am (GCCSDK_VERSION): Add svn branch (SVN_ROOT, SVN_BRANCH,
	SVN_REV).
	* decode.c (decode): Don't print filename when there is only one
	given.  Use opt_print_area_dec.
	* main.c (gotarg): Make local.
	(donext): Remove.
	(main): Add option -i.
	(usage): Update output.

Sun Sep 30 21:51:35 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (print_area): Fix comment.

Wed Aug 15 14:22:46 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decaof.h (FILENAMELEN, PATHNAMELEN, Date): Remove.
	* decode.c (print_area): Merge type 2 and 3 reloc together.

Sat Aug 11 21:56:22 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* main.c, main.h, misc.c, misc.h, io.c, io.h, decode.c, decode.h,
	error.h: cleanup, constify. Don't output identification string when
	options are specified.

Wed Aug  8 00:51:00 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* error.c, error.h, misc.c, misc.h, io.c, io.h, decode.c, main.c,
	main.h, decaof.h: Reindent, cleanup.
	* config.h, Makefile: Remove.
	* configure.ac, Makefile.am: Add.

2006-03-16 02:17  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c: Made decaof a little bit more robust against minimal AOF
	files (i.e. not all chunks available).

2005-10-09 21:05  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile: Moved some 'riscos-dist' work to here.
